--- a/resources/css/fonts.css
+++ b/resources/css/fonts.css
@@ -131,5 +131,13 @@ body {
 }
 
 .btn {
-  @apply px-4 py-2 rounded-lg font-semibold;
+  @apply px-4 py-2 rounded-lg font-semibold border;
+}
+
+.btn-primary {
+  @apply text-white bg-gray-800 hover:bg-gray-700;
+}
+
+.btn-outline {
+  @apply border-gray-300 shadow-sm text-gray-700 hover:bg-gray-100;
 }
